css: align-items breaking the login page but fixing the expenses page

--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,5 @@ html body {
   width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
